fix: various mode kit problems.